--- a/index.html
+++ b/index.html
@@ -52,43 +52,91 @@
       </nav>
 </header>
 <main>
-  <br><br>
   <h1 class="sofia-regular food">Holidays's of the Globe</h1>
+  <section>
   <div class="container text-center">
     <div class="row">
-      <div class="col">
-        Column
+      <div class="col mx-auto w-100">
+        <article><div class="card">
+        <img class="card-img-top" scr="canada.jpeg">
+        <span class="card-body"><h3 class="back-article">Canada Day</h3>
+          <p class="card-text">Canada</p></span>
+        </div>
+      </article>
       </div>
-      <div class="col">
-        Column
+      <div class="col mx-auto w-100">
+        <article><div class="card">
+        <img class="card-img-top">
+        <span class="card-body"><h3 class="back-article">Independence Day</h3>
+          <p class="card-text">Dominican Republic</p></span>
       </div>
-      <div class="col">
-        Column
-      </div>
+    </article>
     </div>
-    <div class="row">
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
+      <div class="col mx-auto w-100">
+        <article><div class="card">
+        <img class="card-img-top">
+        <span class="card-body"><h3 class="back-article">All Souls' Day</h3>
+          <p class="card-text">Brazil</p></span>
       </div>
+    </article>
+    </div>
+
+    <div class="row">
+        <div class="col mx-auto w-100">
+          <article><div class="card">
+          <img class="card-img-top">
+          <span class="card-body"><h3 class="back-article">Victory Day</h3>
+          <p class="card-text">France</p></span>
+        </div>
+      </article>
+    </div>
+        <div class="col mx-auto w-100">
+          <article><div class="card">
+          <img class="card-img-top">
+          <span class="card-body"><h3 class="back-article">Freedom Day</h3>
+          <p class="card-text">South Africa</p></span>
+        </div>
+      </article>
+    </div>
+        <div class="col mx-auto w-100">
+          <article><div class="card">
+          <img class="card-img-top">
+          <span class="card-body"><h3 class="back-article">Festa della Liberazione</h3>
+          <p class="card-text">Italy</p></span>
+        </div>
+      </article>
+      </div>
+
       <div class="row">
-        <div class="col">
-          Column
+        <div class="col mx-auto w-100">
+          <article><div class="card">
+          <img class="card-img-top">
+          <span class="card-body"><h3 class="back-article">Quaid-e-Azam Day</h3>
+          <p class="card-text">Pakistan</p></span>
         </div>
-        <div class="col">
-          Column
+      </article>
+    </div>
+
+        <div class="col mx-auto w-100">
+          <article>
+            <div class="card">
+          <img class="card-img-top">
+          <span class="card-body"><h3 class="back-article">Australia Day</h3>
+          <p class="card-text">Australia</p></span>
         </div>
-        <div class="col">
-          Column
+      </article>
+      </div>
+
+        <div class="col mx-auto w-100">
+          <article><div class="card">
+          <img class="card-img-top">
+          <span class="card-body"><h3 class="back-article">Labor Thanksgiving Day</h3>
+          <p class="card-text">Japan</p></span>
         </div>
+      </article>
       </div>
   </div>
+</section>
 </main>
 <div class="container"><hr></div>
 <footer>
