--- a/index.html
+++ b/index.html
@@ -54,29 +54,93 @@
 <main>
   <h1 class="sofia-regular food">Holidays's of the Globe</h1>
   <section>
-  <div class="container text-center">
+    <div class="container">
+    <div class="row">
+      <div class="col-sm-6 mb-0 mb-sm-0">
+        <article><div class="card">
+          <img class="card-img-top" scr="canada.jpeg">
+          <div class="card-body done">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div></article>
+      <div class="col-sm-6">
+        <article><div class="card">
+          <img class="card-img-top" scr="canada.jpeg">
+          <div class="card-body done">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div></article>
+      <div class="col-sm-6">
+        <article><div class="card">
+          <img class="card-img-top" scr="canada.jpeg">
+          <div class="card-body done">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div></article>
+      <div class="col-sm-6">
+        <article><div class="card">
+          <img class="card-img-top" scr="canada.jpeg">
+          <div class="card-body done">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div></article>
+      <div class="col-sm-6">
+        <article><div class="card">
+          <img class="card-img-top" scr="canada.jpeg">
+          <div class="card-body done">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div></article>
+      <div class="col-sm-6">
+        <article><div class="card">
+          <img class="card-img-top" scr="canada.jpeg">
+          <div class="card-body done">
+            <h5 class="card-title">Special title treatment</h5>
+            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">More Info</a>
+          </div>
+        </div>
+      </div></article>
+    </div>
+  </div>
+  <!-- <div class="container text-center">
     <div class="row">
       <div class="col mx-auto w-100">
         <article><div class="card">
         <img class="card-img-top" scr="canada.jpeg">
-        <span class="card-body"><h3 class="back-article">Canada Day</h3>
-          <p class="card-text">Canada</p></span>
+        <div class="card-body"><h3 class="back-article">Canada Day</h3>
+          <p class="card-text">Canada</p></div>
         </div>
       </article>
       </div>
       <div class="col mx-auto w-100">
         <article><div class="card">
         <img class="card-img-top">
-        <span class="card-body"><h3 class="back-article">Independence Day</h3>
-          <p class="card-text">Dominican Republic</p></span>
+        <div class="card-body"><h3 class="back-article">Independence Day</h3>
+          <p class="card-text">Dominican Republic</p></div>
       </div>
     </article>
     </div>
       <div class="col mx-auto w-100">
         <article><div class="card">
         <img class="card-img-top">
-        <span class="card-body"><h3 class="back-article">All Souls' Day</h3>
-          <p class="card-text">Brazil</p></span>
+        <div class="card-body"><h3 class="back-article">All Souls' Day</h3>
+          <p class="card-text">Brazil</p></div>
       </div>
     </article>
     </div>
@@ -85,16 +149,16 @@
         <div class="col mx-auto w-100">
           <article><div class="card">
           <img class="card-img-top">
-          <span class="card-body"><h3 class="back-article">Victory Day</h3>
-          <p class="card-text">France</p></span>
+          <div class="card-body"><h3 class="back-article">Victory Day</h3>
+          <p class="card-text">France</p></div>
         </div>
       </article>
     </div>
         <div class="col mx-auto w-100">
           <article><div class="card">
           <img class="card-img-top">
-          <span class="card-body"><h3 class="back-article">Freedom Day</h3>
-          <p class="card-text">South Africa</p></span>
+          <div class="card-body"><h3 class="back-article">Freedom Day</h3>
+          <p class="card-text">South Africa</p></div>
         </div>
       </article>
     </div>
@@ -102,7 +166,7 @@
           <article><div class="card">
           <img class="card-img-top">
           <span class="card-body"><h3 class="back-article">Festa della Liberazione</h3>
-          <p class="card-text">Italy</p></span>
+          <p class="card-text">Italy</p></div>
         </div>
       </article>
       </div>
@@ -111,8 +175,8 @@
         <div class="col mx-auto w-100">
           <article><div class="card">
           <img class="card-img-top">
-          <span class="card-body"><h3 class="back-article">Quaid-e-Azam Day</h3>
-          <p class="card-text">Pakistan</p></span>
+          <div class="card-body"><h3 class="back-article">Quaid-e-Azam Day</h3>
+          <p class="card-text">Pakistan</p></div>
         </div>
       </article>
     </div>
@@ -121,8 +185,8 @@
           <article>
             <div class="card">
           <img class="card-img-top">
-          <span class="card-body"><h3 class="back-article">Australia Day</h3>
-          <p class="card-text">Australia</p></span>
+          <div class="card-body"><h3 class="back-article">Australia Day</h3>
+          <p class="card-text">Australia</p></div>
         </div>
       </article>
       </div>
@@ -130,17 +194,17 @@
         <div class="col mx-auto w-100">
           <article><div class="card">
           <img class="card-img-top">
-          <span class="card-body"><h3 class="back-article">Labor Thanksgiving Day</h3>
-          <p class="card-text">Japan</p></span>
+          <div class="card-body"><h3 class="back-article">Labor Thanksgiving Day</h3>
+          <p class="card-text">Japan</p></div>
         </div>
       </article>
       </div>
-  </div>
+  </div> -->
 </section>
 </main>
 <div class="container"><hr></div>
 <footer>
-  <div class="card container">
+  <div class="card container foot">
     <div class="card-body">
       <h6 class="card-text">&copy;Justin&Shakib Inc.</h6>
       <a href="https://www.google.com/maps/place/7-Eleven;+Hiroshima+Chorakuji+2-chome/@34.4739921,132.4299376,17.21z/data=!4m15!1m8!3m7!1s0x355a9908eef34fbb:0x7e4ce50cfc1f772!2sHiroshima,+Japan!3b1!8m2!3d34.3852894!4d132.4553055!16zL20vMGczY3c!3m5!1s0x355a999963d78983:0x383e2c51f8dbdc6a!8m2!3d34.4718982!4d132.4268954!16s%2Fg%2F11b5pkx3hr?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"><p class="card-text">Hiroshima 2-Chrome</p></a>
