--- a/index.html
+++ b/index.html
@@ -55,69 +55,75 @@
   <h1 class="sofia-regular food">Holidays's of the Globe</h1>
   <section>
     <div class="container">
-    <div class="row">
-      <div class="col-sm-6 mb-0 mb-sm-0">
+      <div class="row">
         <article><div class="card">
-          <img class="card-img-top" scr="canada.jpeg">
-          <div class="card-body done">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">More Info</a>
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
-        </div>
-      </div></article>
-      <div class="col-sm-6">
+        </div></article>
+
         <article><div class="card">
-          <img class="card-img-top" scr="canada.jpeg">
-          <div class="card-body done">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">More Info</a>
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
-        </div>
-      </div></article>
-      <div class="col-sm-6">
+        </div></article>
+
         <article><div class="card">
-          <img class="card-img-top" scr="canada.jpeg">
-          <div class="card-body done">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">More Info</a>
+          <img src="..." class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
           </div>
+        </div></article>
+      </div>
+        <div class="row">
+          <article><div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div></article>
+  
+          <article><div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div></article>
+  
+          <article><div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div></article>
         </div>
-      </div></article>
-      <div class="col-sm-6">
-        <article><div class="card">
-          <img class="card-img-top" scr="canada.jpeg">
-          <div class="card-body done">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">More Info</a>
-          </div>
+        
+        <div class="row">
+          <article><div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div></article>
+  
+          <article><div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div></article>
+  
+          <article><div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+          </div></article>
         </div>
-      </div></article>
-      <div class="col-sm-6">
-        <article><div class="card">
-          <img class="card-img-top" scr="canada.jpeg">
-          <div class="card-body done">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">More Info</a>
-          </div>
-        </div>
-      </div></article>
-      <div class="col-sm-6">
-        <article><div class="card">
-          <img class="card-img-top" scr="canada.jpeg">
-          <div class="card-body done">
-            <h5 class="card-title">Special title treatment</h5>
-            <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-            <a href="#" class="btn btn-primary">More Info</a>
-          </div>
-        </div>
-      </div></article>
     </div>
-  </div>
+      
   <!-- <div class="container text-center">
     <div class="row">
       <div class="col mx-auto w-100">
