--- a/index.html
+++ b/index.html
@@ -56,163 +56,79 @@
   <section>
     <div class="container">
       <div class="row">
-        <article><div class="card">
-          <img src="..." class="card-img-top" alt="...">
+        <article><div class="card things">
+          <img src="Images/canada.jpeg" class="card-img-top" alt="Canada">
           <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h2 class="card-texts">Canada Day</h2>
           </div>
         </div></article>
 
-        <article><div class="card">
-          <img src="..." class="card-img-top" alt="...">
+        <article><div class="card things">
+          <img src="Images/dominican-republic-flag-01.jpg" class="card-img-top" alt="DR image">
           <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h2 class="card-texts">Independence Day</h2>
           </div>
         </div></article>
 
-        <article><div class="card">
-          <img src="..." class="card-img-top" alt="...">
+        <article><div class="card things">
+          <img src="Images/all-souls-day-canva.png" class="card-img-top" alt="Brazil">
           <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h2 class="card-texts">All Souls' Day</h2>
           </div>
         </div></article>
       </div>
         <div class="row">
-          <article><div class="card">
-            <img src="..." class="card-img-top" alt="...">
+          <article><div class="card things">
+            <img src="Images/victory-day.avif" class="card-img-top" alt="Russia">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h2 class="card-texts">Victory Day</h2>
+          </div></article>
+  
+          <article><div class="card things">
+            <img src="Images/poster-that-says-happy-freedom-day-south-africa_781929-227.avif" class="card-img-top" alt="SA">
+            <div class="card-body">
+              <h2 class="card-texts">Freedom Day</h2>
             </div>
           </div></article>
   
-          <article><div class="card">
-            <img src="..." class="card-img-top" alt="...">
+          <article><div class="card things">
+            <img src="Images/Buona-festa-della-liberazione.jpg" class="card-img-top" alt="Italy">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
-          </div></article>
-  
-          <article><div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h2 class="card-texts">Festa della Liberazione</h2>
             </div>
           </div></article>
         </div>
         
         <div class="row">
-          <article><div class="card">
-            <img src="..." class="card-img-top" alt="...">
+          <article><div class="card things">
+            <img src="Images/images.jpeg" class="card-img-top" alt="Pakistan">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h2 class="card-texts">Quaid-e-Azam Day</h2>
             </div>
           </div></article>
   
-          <article><div class="card">
-            <img src="..." class="card-img-top" alt="...">
+          <article><div class="card things">
+            <img src="Images/autralia.jpg" class="card-img-top" alt="Australia">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h2 class="card-texts">Australia Day</h2>
             </div>
           </div></article>
   
-          <article><div class="card">
-            <img src="..." class="card-img-top" alt="...">
+          <article><div class="card things">
+            <img src="Images/labor thanks.jpg" class="card-img-top" alt="Japan">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h2 class="card-texts">Labor Thanksgiving Day</h2>
             </div>
           </div></article>
         </div>
     </div>
-      
-  <!-- <div class="container text-center">
-    <div class="row">
-      <div class="col mx-auto w-100">
-        <article><div class="card">
-        <img class="card-img-top" scr="canada.jpeg">
-        <div class="card-body"><h3 class="back-article">Canada Day</h3>
-          <p class="card-text">Canada</p></div>
-        </div>
-      </article>
-      </div>
-      <div class="col mx-auto w-100">
-        <article><div class="card">
-        <img class="card-img-top">
-        <div class="card-body"><h3 class="back-article">Independence Day</h3>
-          <p class="card-text">Dominican Republic</p></div>
-      </div>
-    </article>
-    </div>
-      <div class="col mx-auto w-100">
-        <article><div class="card">
-        <img class="card-img-top">
-        <div class="card-body"><h3 class="back-article">All Souls' Day</h3>
-          <p class="card-text">Brazil</p></div>
-      </div>
-    </article>
-    </div>
-
-    <div class="row">
-        <div class="col mx-auto w-100">
-          <article><div class="card">
-          <img class="card-img-top">
-          <div class="card-body"><h3 class="back-article">Victory Day</h3>
-          <p class="card-text">France</p></div>
-        </div>
-      </article>
-    </div>
-        <div class="col mx-auto w-100">
-          <article><div class="card">
-          <img class="card-img-top">
-          <div class="card-body"><h3 class="back-article">Freedom Day</h3>
-          <p class="card-text">South Africa</p></div>
-        </div>
-      </article>
-    </div>
-        <div class="col mx-auto w-100">
-          <article><div class="card">
-          <img class="card-img-top">
-          <span class="card-body"><h3 class="back-article">Festa della Liberazione</h3>
-          <p class="card-text">Italy</p></div>
-        </div>
-      </article>
-      </div>
-
-      <div class="row">
-        <div class="col mx-auto w-100">
-          <article><div class="card">
-          <img class="card-img-top">
-          <div class="card-body"><h3 class="back-article">Quaid-e-Azam Day</h3>
-          <p class="card-text">Pakistan</p></div>
-        </div>
-      </article>
-    </div>
-
-        <div class="col mx-auto w-100">
-          <article>
-            <div class="card">
-          <img class="card-img-top">
-          <div class="card-body"><h3 class="back-article">Australia Day</h3>
-          <p class="card-text">Australia</p></div>
-        </div>
-      </article>
-      </div>
-
-        <div class="col mx-auto w-100">
-          <article><div class="card">
-          <img class="card-img-top">
-          <div class="card-body"><h3 class="back-article">Labor Thanksgiving Day</h3>
-          <p class="card-text">Japan</p></div>
-        </div>
-      </article>
-      </div>
-  </div> -->
 </section>
 </main>
 <div class="container"><hr></div>
 <footer>
   <div class="card container foot">
     <div class="card-body">
-      <h6 class="card-text">&copy;Justin&Shakib Inc.</h6>
+      <h6 class="card-text">&copy;Justin Inc.</h6>
       <a href="https://www.google.com/maps/place/7-Eleven;+Hiroshima+Chorakuji+2-chome/@34.4739921,132.4299376,17.21z/data=!4m15!1m8!3m7!1s0x355a9908eef34fbb:0x7e4ce50cfc1f772!2sHiroshima,+Japan!3b1!8m2!3d34.3852894!4d132.4553055!16zL20vMGczY3c!3m5!1s0x355a999963d78983:0x383e2c51f8dbdc6a!8m2!3d34.4718982!4d132.4268954!16s%2Fg%2F11b5pkx3hr?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"><p class="card-text">Hiroshima 2-Chrome</p></a>
       <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
     </div>
