--- a/About.html
+++ b/About.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Sacramento&family=Sofia&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -52,8 +52,10 @@
       </nav>
 </header>
 <main>
-<h1 class="d-flex justify-content-center">About Us:</h1>
-  <h2>We are a non-profit organization made to </h2>
+<h1 class="d-flex d-flexa justify-content-center">About Us:</h1>
+  <h4 class="d-flex d-flexa justify-content-center">We are an organization made to teach people about any information they'd like to know aboiut the world since we know not all people have the chance to expirience the beauty of this world in person</h4>
+  <h6 class="d-flex d-flexa justify-content-center">The kind people at "<em>CarribeanKing.Co</em>" have help us start our project and help our kickstarter so we have sponsered them for the organization thanks, here is their story.</h6>
+  <hr>
     <h3>The Legend of Caribbean King and the Cereal Killer Mascot</h3>
         <p>Once upon a time in a bustling neighborhood, there was a young dreamer named Eric Foster who had one goal: to bring the delicious flavors of the Dominican Republic to the world. He had memories of eating his abuela’s mangu and chicharrón, and he wanted everyone to know what they were missing. But Eric Foster wasn’t just any chef—he was extra. So when he opened his restaurant, he didn’t name it something ordinary. No, he called it Caribbean King, and his motto was "Comida de el Restaurante de los Dominicano's"</p>
        <p>Now, Eric Foster had big plans for his restaurant. It wasn’t just going to be about the food; it needed a vibe, a flair, something unforgettable. That’s when the idea of a mascot came in. But Eric Foster wasn’t about the usual cutesy mascots like dancing bananas or smiling coconuts. Oh no, Eric Foster wanted a mascot that would have people talking. That’s when he created the legend of The Cereal Killer…Eric Foster.</p>
@@ -67,17 +69,29 @@
        <p>And so, Caribbean King and its legendary Cereal Killer lived happily ever after, forever destroying boring people and bringing a taste of the Dominican Republic—with a side of chaos—to everyone who dared walk through the door.</p>     
         <h4>The End.</h4></p>
 </h1>
+<hr>
+<h1>People that have helped me in my company:</h1>
+<h3>Eric Foster</h3>
+<div class="d-flex justify-content-between">
+<img src="Images/unnamed.png" width="300px">
+<detail class="foster">Eric is my technology person as well as a passionate and creative educator! He finds unique ways to bring fun and playfulness into the classroom, helping to make technical topics approachable, engaging and exciting for new students. Eric is not only interested helping others learn, but he is also an active learner himself. While working with Eric, he actively sought out opportunities for feedback and personal development so that he could improve his teaching skills. Eric also displayed a knack for curriculum writing, creating his own exercises and finding engaging ways to use technology in the classroom. Overall, Eric is curious, creative, and kind - very lucky to have worked with him!</detail>
+
+</div>
 <div class="container">
-      <h2>Our Location ↴</h2>
-      <div style="max-width:100%;list-style:none; transition: none;overflow:hidden;width:500px;height:500px;"><div id="embed-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=7-Eleven;+Hiroshima+Chorakuji+2-chome,+2+Chome-5-13+Chōrakuji,+Asaminami+Ward,+Hiroshima,+Japan&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="google-maps-html" href="https://kbj9qpmy.com/hrn" id="grab-maps-authorization">Hosting Right Now</a><style>#embed-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
+  <h2>Our Location ↴</h2>
+  <div id="embed-map-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=7-Eleven;+Hiroshima+Chorakuji+2-chome,+2+Chome-5-13+Chōrakuji,+Asaminami+Ward,+Hiroshima,+Japan&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><style>#embed-map-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
 </div>
 </main>
 <br><br><br>
 <div class="container"><hr></div>
 <footer>
   <div class="card container foot">
-    <div class="card-body">
-      <h6 class="card-text">&copy;Justin Inc.</h6>
+    <div class="card-body"> 
+      <div class="d-flex justify-content-between">
+      <h6 class="card-text ">&copy;Justin Inc.</h6>
+      <div>
+      <img class="foot-icon" src="Images/x-social-media-black-icon.png"><img class="foot-icon float-end" src="Images/tik icon.png"><img class="foot-icon float-end" src="Images/reddit icon.png"></div>
+      </div></div>
       <a href="https://www.google.com/maps/place/7-Eleven;+Hiroshima+Chorakuji+2-chome/@34.4739921,132.4299376,17.21z/data=!4m15!1m8!3m7!1s0x355a9908eef34fbb:0x7e4ce50cfc1f772!2sHiroshima,+Japan!3b1!8m2!3d34.3852894!4d132.4553055!16zL20vMGczY3c!3m5!1s0x355a999963d78983:0x383e2c51f8dbdc6a!8m2!3d34.4718982!4d132.4268954!16s%2Fg%2F11b5pkx3hr?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"><p class="card-text">Hiroshima 2-Chrome</p></a>
       <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
     </div>
