--- a/contact.html
+++ b/contact.html
@@ -36,15 +36,15 @@
                       Holiday's
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li><a class="dropdown-item" href="#">Another action</a></li>
-                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                      <li><a class="dropdown-item" href="canada/canada.html">Canada Day</a></li>
+                      <li><a class="dropdown-item" href="DR/dominican-republic.html">Independence Day</a></li>
+                      <li><a class="dropdown-item" href="Brazil/brazil.html">All Souls' Day</a></li>
+                      <li><a class="dropdown-item" href="Russia/russia.html">Victory Day</a></li>
+                      <li><a class="dropdown-item" href="Africa/africa.html">Freedom Day</a></li>
+                      <li><a class="dropdown-item" href="Italy/italy.html">Festa della Liberazione Day</a></li>
+                      <li><a class="dropdown-item" href="Pakistan/pakistan.html">Quaid-e-Azam Day</a></li>
+                      <li><a class="dropdown-item" href="austrailia/australia.html">Australia Day</a></li>
+                      <li><a class="dropdown-item" href="japan/japan.html">labor Thanksgiving Day</a></li>
                     </ul>
                   </li>
               </li>
@@ -54,30 +54,36 @@
       </nav>
 </header>
 <main>
+  <h1 class="d-flex justify-content-center">Our Contacts:</h1>
     <br><br>
-<div><form>
-    <div class="col-md-4 form">
+<div class="row d-flex justify-content-center">
+  <form action="index.html" method="get">
+    <div class="col">
       <label for="inputName4" class="form-label">First Name</label>
       <input type="text" class="form-control" id="inputName4" placeholder="John">
     </div>
-    <div class="col-md-4 form">
+    <div class="col">
       <label for="inputLast4" class="form-label">Last Name</label>
       <input type="text" class="form-control" id="inputLast4" placeholder="Smith">
     </div>
-    <div class="col-md-4 form">
-        <label for="inputLast4" class="form-label">Email</label>
-        <input type="text" class="form-control" id="inputLast4" placeholder="shakiba7@nycstudents.net">
-      </div>
-    <div class="col-md-4 form">
-      <label for="inputAddress" class="form-label">Phone Number</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="+1 (917) 392-9187">
-      </div>
+    <div class="col">
+      <label for="exampleInputEmail1" class="form-label">Email Address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="shakiba7@nycstudents.net">
+    </div>
+    <div class="col">
+      <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+      <input type="tel" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="(917) 392-9187">
+    </div>
+    <div class="col">
+      <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="5" cols="75"></textarea>
     </div>
     <br>
-    <div class="d-flex justify-content-end p-1 text-end">
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </div>
-  </form></div>
+    <div class="container d-flex justify-content-end">
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </div>
+  </form>
+</div>
 </main>
   <div class="container"><hr></div>
 <footer>
