--- a/canada/canada.html
+++ b/canada/canada.html
@@ -18,17 +18,17 @@
     <div class="container">
       <nav class="navbar navbar-expand fixed-top bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand active" href="index.html">World Holiday's</a>
+          <a class="navbar-brand active" href="/index.html">World Holiday's</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="About.html">About Us</a>
+                <a class="nav-link" href="/About.html">About Us</a>
               </li>
               <li class="nav-item text-white">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link" href="/contact.html">Contact</a>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Holiday's
