--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
     <div class="card-body"> 
       <div class="d-flex justify-content-between">
       <h6 class="card-text ">&copy;Justin Inc.</h6>
-      <div>
-      <img class="foot-icon" src="Images/x-social-media-black-icon.png"><img class="foot-icon float-end" src="Images/tik icon.png"><img class="foot-icon float-end" src="Images/reddit icon.png"></div>
+      <div> 
+      <img class="foot-icon" src="Images/X_logo_2023_(white).png"><img class="foot-icon float-end" src="Images/reddit.png"><img class="foot-icon float-end" src="Images/tiktok.png"></div>
       </div></div>
       <a href="https://www.google.com/maps/place/7-Eleven;+Hiroshima+Chorakuji+2-chome/@34.4739921,132.4299376,17.21z/data=!4m15!1m8!3m7!1s0x355a9908eef34fbb:0x7e4ce50cfc1f772!2sHiroshima,+Japan!3b1!8m2!3d34.3852894!4d132.4553055!16zL20vMGczY3c!3m5!1s0x355a999963d78983:0x383e2c51f8dbdc6a!8m2!3d34.4718982!4d132.4268954!16s%2Fg%2F11b5pkx3hr?entry=ttu&g_ep=EgoyMDI1MDIwMy4wIKXMDSoASAFQAw%3D%3D"><p class="card-text">Hiroshima 2-Chrome</p></a>
       <h6 class="card-text">12 A.M - 12 P.M, Everyday</h6>
